# 1Alina

./: Procfile  README.rst  pyproject.toml  requirements.txt
1alina/: __init__.py  settings.py
1alina/views/main/: __init__.py  home.py
irayalina/: __init__.py  settings.py  utils.py
irayalina/static/css/: style.css  style.css.map
irayalina/static/scss/: _extends.scss  _global.scss  _variable.scss  style.scss
irayalina/templates/: base.html  home.html  login.html  register.html
irayalina/templates/includes/: footer.html  navbar.html
irayalina/views/: __init__.py
irayalina/views/main/: __init__.py  home.py
