[tool.poetry]
name = "1alina"
version = "0.1.0"
description = "Serasera kely"
authors = ["Unviray <unviray@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
peewee = "^3.13.3"
flask-WTF = "^0.14.3"
environs = "^8.0.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
